log
Fri 14 Oct 2022 02:52:58 AM UTC: 
 tests:  0|4
total_score: 0/70
1da8101
Sun 16 Oct 2022 07:04:59 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
485c555
Sun 16 Oct 2022 07:05:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
8730c64
Sun 16 Oct 2022 07:07:48 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
cbb08e8
Sun 16 Oct 2022 08:00:36 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:41: error: expected expression before ‘heapElem’
   31 |     pq->heapArray = realloc(pq->capac * heapElem);
      |                                         ^~~~~~~~
heap.c:31:21: error: too few arguments to function ‘realloc’
   31 |     pq->heapArray = realloc(pq->capac * heapElem);
      |                     ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
7380464
Sun 16 Oct 2022 08:05:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:23: error: expected expression before ‘heapElem’
   31 |     pq->heapArray = (*heapElem)realloc(pq->capac,sizeof(heapElem));
      |                       ^~~~~~~~
heap.c:31:32: error: expected ‘;’ before ‘realloc’
   31 |     pq->heapArray = (*heapElem)realloc(pq->capac,sizeof(heapElem));
      |                                ^~~~~~~
      |                                ;
Compilation failed
b07408c
